--- a/ProjectWebDevelopment/appsettings.json
+++ b/ProjectWebDevelopment/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ProjectWebDevelopment-fabdfa80-a134-4954-be92-0aff320ba83e;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "DataSource=ProjectWebDevelopment.sqlite"
   },
   "Logging": {
     "LogLevel": {
