Changed to live environment

--- a/ProjectWebDevelopment/appsettings.json
+++ b/ProjectWebDevelopment/appsettings.json
@@ -1,12 +1,13 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "DataSource=ProjectWebDevelopment.sqlite"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+  {
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=localhost,1433;Database=WieBiedt;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=true;"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
