--- a/ProjectWebDevelopment/appsettings.json
+++ b/ProjectWebDevelopment/appsettings.json
@@ -1,13 +1,12 @@
 {
-  {
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost,1433;Database=WieBiedt;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=true;"
-    },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+  "ConnectionStrings": {
+    "DefaultConnection": "DataSource=ProjectWebDevelopment.sqlite"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
