--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 /.idea/
 /.vs/
+node_modules/
+
+/ProjectWebDevelopment/Tests/cypress/e2e/1-getting-started/
+/ProjectWebDevelopment/Tests/cypress/e2e/2-advanced-examples/
+/ProjectWebDevelopment/Tests/cypress/screenshots/
 
 ###################
 # compiled source #
