--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /.idea/
 /.vs/
 node_modules/
+.env
 
 /ProjectWebDevelopment/Tests/cypress/e2e/1-getting-started/
 /ProjectWebDevelopment/Tests/cypress/e2e/2-advanced-examples/
